[package]
name = "ssh-manager"
version = "0.1.0"
authors = ["ms747 <mayur.shah.ha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_pipe = "0.9.2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
